# ansible-roles

./: README.md  galaxy.yml  pyproject.toml
.github/workflows/: action.yml
apache2/handlers/: main.yml
com_apple_dock/: README.md
com_apple_dock/molecule/default/: converge.yml  verify.yml
com_apple_dock/molecule/docker-image/: Dockerfile  makefile
com_apple_dock/tasks/: main.yml
com_apple_dock/tests/: test.yml
com_apple_dock/vars/: main.yml
dev_tools/: README.md
dev_tools/defaults/: main.yml
dev_tools/tasks/: main.yml
dotfiles/tasks/: main.yml
homebrew/: README.md
homebrew/molecule/default/: verify.yml
homebrew/tasks/: main.yml
nvm/: README.md
nvm/meta/: main.yml
nvm/molecule/default/: converge.yml
nvm/molecule/docker-image/: Dockerfile
nvm/tasks/: main.yml
onepassword/: README.md
onepassword/handlers/: main.yml
onepassword/molecule/default/: verify.yml
onepassword/tasks/: main.yml
onepassword/vars/: main.yml
proxmox/: README.md
proxmox/molecule/docker-image/: Dockerfile
proxmox/tasks/: main.yml
qemu_guest_agent/tasks/: main.yml
roles/apache2/tasks/: main.yml
roles/com_apple_dock/meta/: main.yml
roles/defaults/: README.md
roles/posix/: README.md
roles/proxmox/: README.md
roles/vm_template/: README.md
ubuntu_desktop/files/: .xsessionrc  xrdp-color-manager.pkla
ubuntu_desktop/tasks/: main.yml
ubuntu_kvm_hypervisor/defaults/: main.yml
ubuntu_kvm_hypervisor/tasks/: main.yml
ubuntu_rdp/tasks/: main.yml
vm_template/tasks/: main.yml
vm_template/tests/: test.yml
vm_template/vars/: main.yml
(+41 files in other folders)
